Added a favicon, and improved SEO metadata

--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Basic SEO -->
+<meta name="description" content="Enoch Owoade - Portfolio | Embedded Systems, AI Projects, and Full Stack Web Development">
+<meta name="keywords" content="Enoch Owoade, resume analyzer, smart security camera, embedded systems, django, python, ai projects, student engineer, Mission 2025">
+<meta name="author" content="Enoch Owoade">
+
+<!-- Social Media Preview -->
+<meta property="og:title" content="Enoch Owoade | Engineer & Developer Portfolio">
+<meta property="og:description" content="Explore impactful projects in embedded systems, AI, and full-stack development.">
+<meta property="og:image" content="/preview.png">
+<meta property="og:url" content="https://enochsportfolio.netlify.app/">
+<meta name="twitter:card" content="summary_large_image">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4B4DQS0YDP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4B4DQS0YDP');
+</script>
+
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
     <title>Enoch's Portfolio</title>
   </head>
   <body>
